# PolyCortex

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  constraints.txt  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
backtest/: data_loader.py  report.py  simulator.py
config/: settings.yaml
dashboard/: app.py
docs/: BUYER_QUICKSTART.md  DATABASE.md  DIAGRAMS.md  MULTI_WALLET.md  OBSERVABILITY.md  PERFORMANCE.md  RUNBOOK.md  SECRETS.md  TESTNET.md  TROUBLESHOOTING.md  architecture.md  index.md
ops/grafana/: polymarket-dashboard.json
ops/prometheus/: alerts.yml
scripts/: backup.sh  collect_history.py  export_data.py  healthcheck.py  loadtest.py  migrate.sh  release.sh  run_backtest.py  seed_demo_data.py  train_tcn.py
src/polymarket_agent/: __init__.py  constants.py  demo.py  main.py  types.py
src/polymarket_agent/data/: clob_client.py  gamma_client.py  history.py  news_client.py  ws_client.py
src/polymarket_agent/events/: __init__.py  bus.py
src/polymarket_agent/execution/: arbitrage.py  batch.py  executor.py  paper_engine.py  slippage.py  state_machine.py  trailing_stop.py  twap.py
src/polymarket_agent/features/: engine.py  sentiment.py
src/polymarket_agent/infra/: __init__.py  backpressure.py  circuit_breaker.py  db.py  env_validator.py  health.py  memory_guard.py  metrics.py  pid_lock.py  polygon_rpc.py  rate_limiter.py  retry.py  scheduler.py  shutdown.py  signer.py  telemetry.py  wallet_manager.py
src/polymarket_agent/intelligence/: __init__.py  anomaly.py
src/polymarket_agent/models/: calibration.py  edge.py  regime.py  tcn.py
src/polymarket_agent/reporting/: __init__.py  tax.py
src/polymarket_agent/risk/: alerts.py  drawdown.py  sizer.py  (+1 more)
tests/: conftest.py  test_arbitrage.py  test_backpressure.py  test_batch.py  test_calibration.py  test_circuit_breaker.py  test_constants.py  test_coverage_boost.py  test_coverage_boost_2.py  test_daily_loss_tracker.py  test_data_clients.py  test_db_abstraction.py  test_demo_seed.py  test_drawdown.py  test_edge.py  test_env_validator_pk.py  test_event_bus.py  test_executor.py  test_executor_hardening.py  test_features.py  test_integration.py  test_metrics.py  test_pid_lock.py  test_polygon_rpc.py  test_production_e2e.py  test_production_safety.py  test_rate_limiter.py  test_reconciler.py  test_regime.py  test_resolver.py  test_scheduler.py  test_signer.py  test_sizer.py  test_slippage.py  test_state_machine.py  test_strategies.py  test_tax_reporting.py  test_telegram.py  test_telemetry.py  test_types.py  (+1 more)
tests/integration/: test_contract_shapes.py  test_e2e_flow.py
(+15 files in other folders)
